--- a/biome.json
+++ b/biome.json
@@ -9,10 +9,12 @@
 		"indentStyle": "tab",
 		"indentWidth": 2,
 		"lineWidth": 80,
-		"lineEnding": "lf"
+		"lineEnding": "lf",
+		"ignore": ["node_modules", "next", "dist", "build"]
 	},
 	"linter": {
 		"enabled": true,
+		"ignore": ["node_modules", "next", "dist", "build"],
 		"rules": {
 			"recommended": true
 		}
